@@ -3,11 +3,10 @@
 ##
 
 C_FILES = start.c
-C_O_FILES = $(C_FILES:%.c=$(ARCH)/%.$(OBJEXT))
+OBJS = $(C_FILES:%.c=$(ARCH)/%.$(OBJEXT))
+S_FILES = except_vect_332_ROM.S
+OBJS += $(S_FILES:%.c=$(ARCH)/%.$(OBJEXT))
 
-OBJS = $(C_O_FILES)
-
-include $(RTEMS_ROOT)/make/custom/@RTEMS_BSP@.cfg
 include $(top_srcdir)/../../../../../../automake/compile.am
 include $(top_srcdir)/../../../../../../automake/lib.am
 
@@ -30,16 +29,16 @@ $(PROJECT_RELEASE)/lib/except_vect_332_ROM$(LIB_VARIANT).$(OBJEXT): \
     $(ARCH)/except_vect_332_ROM.$(OBJEXT)
 	$(INSTALL_DATA) $< $@
 
-$(PROJECT_RELEASE)/lib/ram_init$(LIB_VARIANT): \
-    $(ARCH)/ram_init
+$(PROJECT_RELEASE)/lib/ram_init$(LIB_VARIANT): $(ARCH)/ram_init
 	$(INSTALL_DATA) $< $@
 
-$(PROJECT_RELEASE)/lib/ram_init_FW$(LIB_VARIANT): \
-    $(ARCH)/ram_init_FW
+$(PROJECT_RELEASE)/lib/ram_init_FW$(LIB_VARIANT): $(ARCH)/ram_init_FW
 	$(INSTALL_DATA) $< $@
 
-$(ARCH)/ram_init: $(srcdir)/start.c $(srcdir)/ram_init.ld \
-    $(srcdir)/ram_init.sed
+$(PROJECT_RELEASE)/lib/start$(LIB_VARIANT).$(OBJEXT): $(ARCH)/start.$(OBJEXT)
+	$(INSTALL_DATA) $< $@
+
+$(ARCH)/ram_init: $(srcdir)/start.c $(srcdir)/ram_init.ld $(srcdir)/ram_init.sed
 	sed -f $(srcdir)/ram_init.sed $(srcdir)/start.c >$(ARCH)/ram_init.S
 	$(CC) -D SIM_CRB=0x0000 -E $(ARCH)/ram_init.S >$(ARCH)/ram_init1.S
 	sed "/.$(OBJEXT)rg/ {N; s/\n/%/; P;}; /\.text/P; D;" $(ARCH)/ram_init1.S | \
